# codex

./: .bazelrc  .codespellrc  AGENTS.md  MCP配置问题分析报告.md  MODULE.bazel  OpenAI_Responses_API_工具调用分析报告.md  README.md  codex_sdk_2_prototype_summary.md  defs.bzl  job-scheduler-plan.md  justfile  package.json  plan.md  reasoning_language_analysis.md  requirements_toml_分析报告.md  universal-computer-codex-app-server-rfc.md  workspace_root_test_launcher.bat.tpl  功能调研报告.md
codex-rs/acp-server/: Cargo.toml
codex-rs/acp-server/src/: lib.rs  main.rs  protocol.rs
codex-rs/acp-server/tests/: stdio.rs
codex-rs/auth/: BUILD.bazel  Cargo.toml  auth.rs  auth_tests.rs  lib.rs  util.rs
codex-rs/auth/src/: env_telemetry.rs  lib.rs  storage.rs  storage_tests.rs  tests.rs  token_data.rs  token_data_tests.rs
codex-rs/capabilities/: BUILD.bazel  Cargo.toml
codex-rs/capabilities/src/: config_types.rs  lib.rs  mentions.rs
codex-rs/code-mode/: BUILD.bazel  Cargo.toml
codex-rs/code-mode/benches/: exec_overhead.rs
codex-rs/code-mode/src/: api.rs  bazel_stub.rs  code_mode_bridge.js  description.rs  imp.rs  lib.rs  libc_stack_end_shim.cc  runtime_stub.rs  service.rs  service_stub.rs
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-api/src/: auth.rs  common.rs  files.rs  lib.rs  rate_limits.rs
codex-rs/codex-api/tests/: clients.rs  models_integration.rs  realtime_websocket_e2e.rs
codex-rs/codex-auth/: BUILD.bazel  Cargo.toml
codex-rs/codex-auth/src/: error.rs  lib.rs  model_provider_info_tests.rs  provider.rs  token_data.rs  token_data_tests.rs
codex-rs/config/: Cargo.toml
codex-rs/config-schema/: BUILD.bazel  Cargo.toml
codex-rs/config-schema/src/: config_toml.rs  features.rs  lib.rs  model_provider.rs  permissions.rs  schema_presentation_template.json
codex-rs/config/src/: config_requirements.rs  constraint.rs  diagnostics.rs  layer_io.rs  lib.rs  loader.rs  macos.rs  state.rs
codex-rs/core-skills/: Cargo.toml
codex-rs/core-skills/src/: loader.rs  manager.rs
codex-rs/exec/: BUILD.bazel  Cargo.toml
codex-rs/exec-server/: Cargo.toml  DESIGN.md  README.md
codex-rs/exec-server/src/: client.rs  client_api.rs  connection.rs  environment.rs  executor.rs  file_system.rs  fs.rs  lib.rs  local.rs  local_file_system.rs  local_process.rs  process.rs  protocol.rs  remote_file_system.rs  remote_process.rs  rpc.rs  sandboxed_file_system.rs  server.rs  server_process.rs
codex-rs/exec-server/tests/: common.rs  exec_process.rs  file_system.rs  initialize.rs  process.rs  stdio_smoke.rs  websocket.rs
codex-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_human_output_tests.rs  event_processor_with_jsonl_output.rs  event_processor_with_jsonl_output_tests.rs  lib.rs  lib_tests.rs  main.rs  typed_exec_event.rs
codex-rs/exec/tests/: all.rs  event_processor_with_json_output.rs
codex-rs/executor/: Cargo.toml
codex-rs/executor-protocol/: Cargo.toml
codex-rs/executor-protocol/src/: lib.rs
codex-rs/executor/src/: cli.rs  lib.rs  main.rs
codex-rs/extensions/: BUILD.bazel  Cargo.toml
codex-rs/extensions/src/: lib.rs
codex-rs/feedback/: Cargo.toml
codex-rs/feedback/src/: lib.rs
codex-rs/file-transfer/: BUILD.bazel  Cargo.toml
codex-rs/file-transfer/src/: lib.rs
codex-rs/fs-ops/: BUILD.bazel  Cargo.toml
codex-rs/fs-ops/src/: command.rs  command_tests.rs  constants.rs  error.rs  lib.rs  response.rs  runner.rs  runner_tests.rs
codex-rs/i18n/: BUILD.bazel  Cargo.toml
codex-rs/i18n/src/: lib.rs
codex-rs/keyring-store/: Cargo.toml
codex-rs/keyring-store/src/: json_store_full.rs  json_store_split.rs  lib.rs  macos.rs  split_json.rs
codex-rs/mcp-core/: BUILD.bazel  Cargo.toml
codex-rs/mcp-core/src/: auth.rs  config.rs  connection_manager.rs  connection_manager_tests.rs  lib.rs  tool_approval_templates.rs  tool_call.rs
codex-rs/mcp-types/: Cargo.toml
codex-rs/mcp-types/src/: lib.rs
codex-rs/memories/: BUILD.bazel  Cargo.toml
codex-rs/memories/src/: lib.rs  memory_trace.rs
codex-rs/models/: BUILD.bazel  Cargo.toml
codex-rs/models/src/: api_bridge.rs  auth_env_telemetry.rs  error.rs  feedback_tags.rs  lib.rs  model_provider_info.rs  response_debug_context.rs
codex-rs/otel/: Cargo.toml  README.md
codex-rs/otel/src/: lib.rs  otel_provider.rs
codex-rs/otel/tests/: otel_file_export.rs
codex-rs/plugin/: Cargo.toml
codex-rs/plugin/src/: lib.rs
codex-rs/rollout/: Cargo.toml
codex-rs/rollout/src/: error.rs  file_io.rs  file_io_tests.rs  git_info.rs  lib.rs  list.rs  metadata.rs  metadata_tests.rs  path_utils.rs  policy.rs  recorder.rs  recorder_tests.rs  session_index.rs  session_index_tests.rs  state_db.rs  state_db_tests.rs  test_support.rs  tests.rs  truncate.rs
codex-sdk-v2/: README.md  pyproject.toml
codex-sdk-v2/examples/packaged_agents/: byo_session.py  custom_function_tool_demo.py  manual_tool_control_demo.py  (+2 more)
patches/: BUILD.bazel  aws-lc-sys_memcmp_check.patch  aws-lc-sys_windows_msvc_memcmp_probe.patch  aws-lc-sys_windows_msvc_prebuilt_nasm.patch  llvm_macos_sdk_local_fallback.patch  llvm_windows_symlink_extract.patch  opus_windows_gnullvm_stack_probe.patch  rules_rs_build_script_triples.patch  rules_rs_delete_git_worktree_pointer.patch  rules_rs_process_wrapper_emit_metadata.patch  rules_rs_windows_gnullvm_exec.patch  rules_rust_repository_set_exec_constraints.patch  rules_rust_windows_bootstrap_process_wrapper_linker.patch  rules_rust_windows_exec_bin_target.patch  rules_rust_windows_exec_msvc_build_script_env.patch  rules_rust_windows_exec_std.patch  rules_rust_windows_gnullvm_build_script.patch  rules_rust_windows_msvc_direct_link_args.patch  rules_rust_windows_nightly_gnu.patch  rusty_v8_prebuilt_out_dir.patch  toolchains_llvm_bootstrapped_linux_skip_static_runtime_libs.patch  toolchains_llvm_bootstrapped_macos_toolchain.patch  toolchains_llvm_trim_mingw_msvcrt_patch.patch  v8_bazel_rules.patch  v8_module_deps.patch  v8_relative_prebuilt_binding_path.patch  v8_source_portability.patch  webrtc-audio-processing-sys_meson_env.patch  windows-link.patch  xz_windows_no_stack_protector.patch
(+2488 files in other folders)
