[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-sdk-v2"
version = "0.1.0"
description = "Experimental Codex SDK v2 prototype built on Codex app-server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0"
]

[tool.setuptools.packages.find]
where = ["src"]
