exports_files([
    "aws-lc-sys_memcmp_check.patch",
    "rules_rust_windows_gnullvm_build_script.patch",
    "rules_rs_windows_gnullvm_exec.patch",
    "rusty_v8_prebuilt_out_dir.patch",
    "v8_bazel_rules.patch",
    "v8_module_deps.patch",
    "v8_source_portability.patch",
    "windows-link.patch",
])
