[package]
name = "codex-acp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-acp-server"
path = "src/main.rs"

[lib]
name = "codex_acp_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
codex-app-server-client = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-arg0 = { workspace = true }
codex-cloud-requirements = { workspace = true }
codex-core = { workspace = true }
codex-feedback = { workspace = true }
codex-protocol = { workspace = true }
codex-rmcp-client = { workspace = true }
codex-utils-cli = { workspace = true }
futures = { workspace = true, default-features = false, features = ["std"] }
rmcp = { workspace = true, default-features = false, features = ["client", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
codex-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
