[package]
name = "codex-executor-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_executor_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
