[package]
name = "codex-executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-executor"
path = "src/main.rs"

[lib]
name = "codex_executor"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-executor-protocol = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
