[package]
name = "codex-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false
name = "codex_extensions"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
