[package]
name = "codex-fs-ops"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_fs_ops"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
