[package]
name = "codex-keyring-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { workspace = true, features = ["crypto-rust"] }

[target.'cfg(all(not(target_os = "android"), target_os = "linux"))'.dependencies]
keyring = { workspace = true, features = ["linux-native-async-persistent"] }

[target.'cfg(all(not(target_os = "android"), target_os = "macos"))'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(all(not(target_os = "android"), target_os = "windows"))'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(all(not(target_os = "android"), any(target_os = "freebsd", target_os = "openbsd")))'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service"] }
