[package]
name = "codex-keyring-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
keyring = { workspace = true, features = ["crypto-rust"] }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native-async-persistent"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
keyring = { workspace = true, features = ["apple-native"] }
security-framework = { version = "3", features = ["OSX_10_15"] }
security-framework-sys = "2.15"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service"] }
