[package]
name = "codex-rollout"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_rollout"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
codex-file-search = { workspace = true }
codex-otel = { workspace = true }
codex-protocol = { workspace = true }
codex-state = { workspace = true }
codex-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "local-offset",
    "macros",
] }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { workspace = true, features = ["log"] }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
